--- a/internal/render/README.md.tmpl
+++ b/internal/render/README.md.tmpl
@@ -14,5 +14,5 @@ Have fun!
 
 <a href="https://github.com/bahadir/bahadir/issues/new?assignees=&labels=game-input&template=go_left.md&title=Go+left">⬅️</a> <a href="https://github.com/bahadir/bahadir/issues/new?assignees=&labels=game-input&template=go_up.md&title=Go+up">⬆️</a> <a href="https://github.com/bahadir/bahadir/issues/new?assignees=&labels=game-input&template=go_down.md&title=Go+down">⬇️</a> <a href="https://github.com/bahadir/bahadir/issues/new?assignees=&labels=game-input&template=go_right.md&title=Go+right">➡️</a> *Click the buttons to create a **Github Issue** that gives an order to the hero.*
 
-## Random Tip
+## Tip of the day
 {{ .Tip }}
