Revise README template for personal introduction
Updated personal introduction and project description.

--- a/internal/render/README.md.tmpl
+++ b/internal/render/README.md.tmpl
@@ -1,12 +1,12 @@
 # Me
 
-Hello! This is **Bahadir Kandemir**.
+Hello! I'm **Bahadir Kandemir**.
 
-I'm a software developer living in **Espoo, Finland**. I work at **Unity** as a backend developer, and I develop games on my leisure time.
+I live in **Finland**, and work at **Unity** as a Senior Software Engineer. I’m not on the engine team, but I still get to build game development tools and create small games in my spare time.
 
-There's nothing much here to see but you can play my Role Playing Game on GitHub.
+I enjoy experimenting with small projects, trying out new gameplay ideas, and exploring creative tools and technologies. While there's not a lot to showcase here yet, you can check out my Role Playing Game project on GitHub. It's a small but fun game you can play using Github Issues.
 
-Have fun!
+Thanks for stopping by, and I hope you enjoy it!
 
 # RPG on GitHub
 
